--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Welcome to OpenEMR!!! Edited by Naveen Kumar MR.
+Welcome to OpenEMR!!! Edited by Naveen Kumar.
 
 OpenEMR is a Free and Open Source electronic health records and
 medical practice management application. It is ONC Complete
